# cad-scaler-digitizer

./: .dockerignore  .env.production.template  .gitignore  AUDIT_LOG.md  AUDIT_REPORT.md  Dockerfile.api  Dockerfile.crawler-worker  Dockerfile.frontend  Dockerfile.mcp  Dockerfile.node-api  Dockerfile.python-worker  PIPELINE.md  README.md  UPDATES_LOG.md  cad.abcx124.xyz.conf  check_site.js  deploy.sh  docker-compose.prod.yml  docker-compose.yml  nginx.conf  nginx.prod.conf  package-lock.json  package.json  playwright.config.ts  temp_analyze_batches.py
backend-python/: .env.example  pyproject.toml  requirements.txt  test_circle_hatch.dxf  test_hatch.dxf  worker_entrypoint.sh
backend-python/app/: main.py  queue_worker.py
backend-python/app/agents/: __init__.py  architect.agent.md  cad-rebuilder.agent.md  cad.agent.md  dimension-validator.agent.md  dxf_verifier_agent.py  furniture-classifier.agent.md  silhouette_gallery.py  svg_optimizer.py  svg_quality_verifier.py  vision.agent.md
backend-python/app/api/: routes.py
backend-python/app/backend/: __init__.py  brain_sync.py  (+48 more)
backend-python/data/: resource_engine.db
backend-python/scripts/: append_product_routes.py  appends_products.py  create_ml_tables.sql  create_monitoring_tables.sql  e2e_pipeline.py  generate_batch_fixtures.py  generate_template_graphs.py  scrape_furniture.py  setup_vps.sh  test_cad_intel_fixture.py  test_product_catalog.py  test_templates.py  train_classifier.py
backend-python/tests/: conftest.py  test_cfg.py  test_drawing_builders.py  test_dxf_exporter.py  test_regression.py  test_templates.py
(+973 files in other folders)
