[project]
name = "cad-scaler-digitizer-backend"
version = "2.0.0"
requires-python = ">=3.10"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by ruff formatter)
    "N802",  # function name should be lowercase (many CAD functions use underscore)
    "N803",  # argument name should be lowercase
    "N806",  # variable in function should be lowercase
    "N814",  # camelcase imported as constant (Point as DMP, View as DV — standard Python aliases)
    "N817",  # camelcase imported as acronym (DrawingModel as DM — standard import shortening)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_any_unimported = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "app.backend.cfg.*",
    "app.backend.grammar.*",
    "app.backend.self_critic.*",
]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
